# art-inside-me

./: Cargo.toml  README.md  feed.xml  index.html  sitemap.xml
.github/workflows/: publish.yml
examples/: cc_001.rs  cc_0010_particles.rs  cc_0010_qinghaihu.rs  cc_0011.rs  cc_002_bytedance.rs  cc_003_kock_curve.rs  cc_004.rs  cc_004_mandelbrot.rs  cc_005.rs  cc_006.rs  cc_007.rs  cc_007_dawn.rs  cc_008.rs  cc_009_bytedance_new.rs  lines.rs  simple.rs
notes/: midpoint_displacement.md  zine.toml
notes/content/season-1/: zine.toml
s1/: index.html
s1/1/: index.html
src/: lib.rs  main.rs  shader.wgsl
