[package]
name = "art-inside-me"
version = "0.1.0"
authors = ["丁科 <me@dingkewz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.17"
# winit = "0.24"
# wgpu = "0.7" 
# bytemuck = {version = "1.5", features = ["derive"]}
# rand = "0.8"
# futures = "0.3"
# anyhow = "1.0"
